# dbgee

./: Cargo.toml  README.md  draft_README.md
.github/workflows/: ci.yml  cli-cd.yml  cli-conventional-commit-config.js  cli-conventional-commit-config.json  vsc-cd.yml
dbgee/: Cargo.toml  LICENSE.txt
dbgee/src/: debugger.rs  debugger_terminal.rs  file_helper.rs  lib.rs  main.rs  os.rs
dbgee/src/os/: linux.rs  macos.rs
dbgee/tests/: integration_test.rs
dbgee/tests/fake_commands/: echo_args_and_wake_pid.sh  fake_python.sh  python3  tmux
dbgee/tests/lang_projects/: Makefile
dbgee/tests/lang_projects/c/: hello  hello-x86_64-macos  hello.c
dbgee/tests/lang_projects/go/: go.mod  hello  hello-x86_64-macos  hello.go
dbgee/tests/lang_projects/python/: hello
dbgee/tests/lang_projects/rust/: Cargo.toml  hello  hello-x86_64-linux  hello-x86_64-macos
resources/: wrapper.sh
src/: main.rs
vscode-ext/: .gitignore  CHANGELOG.md  README.md  package.json
vscode-ext/src/: extension.ts
