[package]
name = "dbgee"
version = "0.1.0"
authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
nix = "0.20.0"
structopt = "0.3"
strum = { version = "0.20", features = ["derive"] }
anyhow = "1.0"
indoc = "1.0"
tempfile = "3"
ctrlc = { version = "3.0", features = ["termination"] }
once_cell = "1.0"
sysinfo = "0.17"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
